--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "test": "vitest"
+    "test": "vitest",
+    "deploy": "ts-node --project  tsconfig.node.json --esm ./script/deploy.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
@@ -19,9 +20,12 @@
   "devDependencies": {
     "@nuxt/test-utils": "^3.11.0",
     "@vue/test-utils": "^2.4.4",
+    "cross-env": "^7.0.3",
     "happy-dom": "^13.6.2",
+    "kleur": "^4.1.5",
     "playwright-core": "^1.42.1",
     "prisma": "^5.10.2",
+    "ts-node": "^10.9.2",
     "vitest": "^1.3.1"
   }
 }
