--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
         # SSH port number.
         port: 22
         # SSH username.
-        username: liaoqinwei
+        username: root
         # SSH password.
         password: ${{ secrets.SERVER_PASSWORD }}
         # envs: DATABASE_USER,DATABASE_PASSWORD,DATABASE_HOST,DATABASE_PORT,DATABASE_NAME
