--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,5 +95,5 @@ jobs:
         # Commands to be executed.
         script: | 
           cd /opt/blog 
-          npx cross-env DATABASE_URL=postgresql://$DATABASE_USER:$DATABASE_PASSWORD@$DATABASE_HOST:$DATABASE_PORT/$DATABASE_NAME?schema=public npm run deploy
+          cross-env DATABASE_URL=postgresql://$DATABASE_USER:$DATABASE_PASSWORD@$DATABASE_HOST:$DATABASE_PORT/$DATABASE_NAME?schema=public npm run deploy
         
