--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,6 +95,7 @@ jobs:
         # Commands to be executed.
         script: | 
           cd /opt/blog 
+          export PATH=/opt/node-v18.19.1-linux-x64/bin:$PATH
           echo $PATH
           cross-env DATABASE_URL=postgresql://$DATABASE_USER:$DATABASE_PASSWORD@$DATABASE_HOST:$DATABASE_PORT/$DATABASE_NAME?schema=public npm run deploy
         
