--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "moduleResolution": "nodenext",
-    "module": "nodenext"
+    "module": "NodeNext"
   },
   "include": ["script/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
