--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,11 +91,11 @@ jobs:
         username: root
         # SSH password.
         password: ${{ secrets.SERVER_PASSWORD }}
-        # envs: DATABASE_USER,DATABASE_PASSWORD,DATABASE_HOST,DATABASE_PORT,DATABASE_NAME
+        envs: DATABASE_USER,DATABASE_PASSWORD,DATABASE_HOST,DATABASE_PORT,DATABASE_NAME
         # Commands to be executed.
         script: | 
           cd /opt/blog 
           export PATH=/opt/node-v18.19.1-linux-x64/bin:$PATH
           echo $PATH
-          cross-env DATABASE_URL=postgresql://$DATABASE_USER:$DATABASE_PASSWORD@$DATABASE_HOST:$DATABASE_PORT/$DATABASE_NAME?schema=public npm run deploy
+          cross-env DATABASE_URL="postgresql://$DATABASE_USER:$DATABASE_PASSWORD@$DATABASE_HOST:$DATABASE_PORT/$DATABASE_NAME?schema=public" npm run deploy
         
