--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "node ./script/deploy.js"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@prisma/client": "^5.10.2",
     "nuxt": "^3.10.3",
     "vue": "^3.4.19",
@@ -24,7 +25,10 @@
     "happy-dom": "^13.6.2",
     "playwright-core": "^1.42.1",
     "prisma": "^5.10.2",
+    "sass": "^1.72.0",
     "ts-node": "^10.9.2",
-    "vitest": "^1.3.1"
+    "vite-plugin-vuetify": "^2.0.3",
+    "vitest": "^1.3.1",
+    "vuetify": "^3.5.9"
   }
 }
